[Qt] 4 Layout test fail due to network error constant values clash with WebkitError enum values in FrameloaderclientQt https://bugs.webkit.org/show_bug.cgi?id=71554

Patch by Deepak Sherveghar <bpwv64@motorola.com> on 2011-11-09
Reviewed by Simon Hausmann.

Source/WebKit/qt:

We should check the error domain when checking the error code in shouldFallBack()

* WebCoreSupport/FrameLoaderClientQt.cpp:
(WebCore::FrameLoaderClientQt::shouldFallBack): added error domain check

LayoutTests:

Un-skip the 4 failing layout test, we now check the error domain along with the error code in shouldFallBack()

* platform/qt/Skipped:

Canonical link: https://commits.webkit.org/88266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99699 268f45cc-cd09-0410-ab3c-d52691b4dbfc